--- a/style.css
+++ b/style.css
@@ -35,8 +35,8 @@ span
 label
 {
   font-size: 14px;
-  color: #ff0000;
+  color: #ffd000;
   padding: 6px;
   border-radius: 10px;
-  background-color: rgb(255, 204, 37);
+  background-color: rgb(44, 44, 42);
 }
